mobile.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");

* {
  font-family: "Roboto";
}

html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

.calc {
  height: 150vh;
  background: black;
  border-radius: 5px;
  position: absolute;
  top: -78%;
  left: 50%;
  transform: translate(-50%, 50%);
  width: 100vw;
}

#output {
  width: 100%;
  font-size: 4rem;
  height: 200px;
  border: none;
  background-color: #000;
  color: #fff;
  text-align: right;
  padding-top: 100px;
  padding-right: 20px;
  padding-left: 10px;
  word-wrap: break-word;
  word-break: break-all;
}

.calc-keys {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 20px;
  padding: 20px;
  height:80vh;
  padding-top: 150px;
}

button {
  height: 60px;
  background-color: #313131;
  border-radius: 20px;
  border: 1px solid black;
  font-size: 2rem;
  color: white;
}
button:hover {
  background-color: gray;
}
.operator {
  background: #fe9501;
}
.operator:hover {
  background-color: #ffd191;
}
.operator:focus {
  background-color: white;
  color: #fe9501;
}

#plus {
  grid-row-start: 4;
  grid-column-start: 4;
}
#minus {
  grid-row-start: 2;
  grid-column-start: 4;
}
#times {
  grid-row-start: 3;
  grid-column-start: 4;
}
#by {
  grid-row-start: 1;
  grid-column-start: 4;
}
#equal-sign {
  grid-row-start: 5;
  grid-column-start: 4;
  background: #fe9501;
}
#wide {
  grid-row-start: 5;
  grid-column-start: 1;
  grid-column-end: 4;
  width: 100%;
}
#decimal {
  grid-row-start: 5;
  grid-column-start: 3;
}
#all-clear {
  grid-row-start: 1;
  grid-column-start: 1;
  grid-column-end: 4;
  width: 100%;
}
.output .previous-operand {
  color: lightgray;
  font-size: 2rem;
}
.output .current-operand {
  color: white;
}
#equal-sign:hover {
  background-color: #ffd191;
}
#equal-sign:focus {
  background-color: white;
  color: #fe9501;
}

